[Surrey] Workaround Edge bug causing invisible autocomplete text

--- a/web/cobrands/surrey/base.scss
+++ b/web/cobrands/surrey/base.scss
@@ -32,6 +32,9 @@ input[type="text"],
 textarea {
   color: #222; // requested by Surrey
   font-size: 1.175rem;
+  // workaround for Edge bug where autocomplete text is white
+  // https://stackoverflow.com/questions/78490541/how-do-i-override-the-being-autocompleted-input-color-in-microsoft-edge
+  -webkit-text-fill-color: #222;
 }
 
 
